# tonaris

./: README.md
.github/workflows/: backend.yml  web.yml
.helix/: languages.toml
.zed/: settings.json
backend/: .env  .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  clippy.toml  go.mod  go.sum  mise.toml  railway.toml  rustfmt.toml
backend/cmd/gen-openapi/: main.go
backend/cmd/server/: main.go
backend/internal/api/: app.go  app_test.go  hello.go  middleware.go  problem.go  system.go
backend/internal/apperr/: error.go  error_test.go  http.go  kind.go
backend/internal/authn/: authn.go
backend/internal/config/: config.go  config_test.go
backend/internal/httpapi/: app.go  app_test.go  errors.go
backend/internal/logging/: attrs.go  context.go  logger.go  logger_test.go  middleware.go  middleware_test.go
backend/internal/projectpath/: root.go
backend/src/: lib.rs  main.rs
shared/: openapi.json
web/: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  README.md  openapi-ts.config.ts  package.json  railway.json  tsconfig.json  vite.config.ts
web/.nitro/vite/services/ssr/: server.js
web/.nitro/vite/services/ssr/assets/: _tanstack-start-manifest_v-BbALyPff.js  index-Bpv2MfY3.js  router-DgXFWX8L.js
web/src/client/: index.ts  sdk.gen.ts  types.gen.ts
web/src/client/@tanstack/: react-query.gen.ts
web/src/config/: env.public.ts  env.server.ts  env.ts
web/src/routes/: __root.tsx  index.tsx
web/src/styles/: globals.css
