[package]
name = "tonaris"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"
default-run = "tonaris"

[dependencies]
tokio = { version = "1.49.0", features = ["macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
salvo = { version = "0.89.2", features = ["oapi", "cors"] }
salvo-cors = "0.89.2"
serde_json = "1"
